# shepherd

./: .gitignore  README.md  dev.py  parallel.py  policy.py  pyproject.toml  pyrightconfig.json  supervisor.py  tasks.py
.claude-plugin/: marketplace.json  plugin.json
codex/: README.md
codex/skills/shepherd-dev/: SKILL.md
commands/: init.md  optimize.md  run.md  run2.md  settle-par.md  settle.md
docs/: 2026-07-11-dev-layer-design.md  2026-07-12-context-pack-ab-benchmark.md  2026-07-12-study-cro-treerl-autoapply.md  2026-07-14-grok-provider-l1-l2.md  2026-07-19-codex-provider.md  MANUAL.en.md  MANUAL.md  article-medium.md
examples/cursor/: shepherd-dev.mdc
scripts/: bootstrap.sh
skills/shepherd-dev/: SKILL.md
src/shepherd_dev/: __init__.py  cli.py  config.py  contextpack.py  diffcollect.py  events.py  history.py  mcpserver.py  memory.py  notify.py  optimize.py  parallel.py  planning.py  policy.py  procstream.py  progress.py  prompts.py  remotegate.py  staging.py  status.py  supervisor.py  tasks.py  updatecheck.py  worker_watchdog.py
tests/: test_autocommit.py  test_catestudy.py  test_codex_exec.py  test_codex_host.py  test_conductor_adoptions.py  test_contextpack.py  test_diffcollect.py  test_events.py  test_gate_resolve.py  test_gatestream.py  test_grok_host.py  test_mcpserver.py  test_perf.py  test_planning.py  test_policy.py  test_progress.py  test_provider_defaults.py  test_remotegate_ssh.py  test_remotegate_warmup.py  test_runn.py  test_stage.py  test_supervisor.py  test_teepump.py  test_updatecheck.py  test_verbose.py  test_worker_watchdog.py
(+8 files in other folders)
